--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Smashtimer</string>
     <string name="title_activity_main3">Main3Activity</string>
+    <string name="title_activity_login">Login</string>
 </resources>
