--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Smashtimer</string>
     <string name="title_activity_main3">Main3Activity</string>
     <string name="title_activity_login">Login</string>
+    <string name="webserverURL">https://notifood.000webhostapp.com/dLogin.php?</string>
 </resources>
